# lakeflow-bronze-handoff-demo

./: .gitignore  LICENSE  README.md  databricks.yml  pyproject.toml
.github/workflows/: ci.yml
data/sample/batch_002_schema_drift/: orders_2026-03-02.json
data/sample/batch_003_duplicate_replay/: orders_2026-03-02-replay.json
data/sample/batch_004_partial_payload/: orders_2026-03-03.json
docs/: architecture.md  case_study.md  generate_visuals.py
notebooks/: 00_seed_demo_files.py  01_review_outputs.py
resources/: bronze_handoff.pipeline.yml  refresh_demo.job.yml
src/bronze_handoff_demo/: __init__.py  demo_metrics.py  manifests.py  rules.py  sample_data.py
src/lakeflow_sql/: 00_bronze_orders_raw.sql  10_ops_batch_registry.sql  20_ops_quarantine_rows.sql  30_bronze_orders_ready.sql  40_ops_handoff_summary.sql
tests/: test_batch_registry.py  test_demo_metrics.py  test_quarantine_logic.py  test_sample_data.py  test_visuals.py
